# ai-system-security-automation

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md
docs/architecture/: README.md  logging.md
docs/changelog/: 2026-01-05-week01.md  2026-01-06-week01.md  2026-01-12-week02.md  2026-01-19-week03.md
docs/decisions/: 0001-repo-standards.md  0002-secrets-model-and-rotation.md  0003-logging-and-correlation-ids.md
docs/runbooks/: local-dev.md
scripts/: bootstrap.sh
src/security_automation/: __init__.py  __main__.py  main.py
src/security_automation/observability/: __init__.py  context.py  logging.py
tests/: test_logging.py  test_module_entrypoint.py  test_smoke.py
